--- a/style/main.css
+++ b/style/main.css
@@ -535,6 +535,9 @@ header button:hover {
 }
 
 @media screen and (max-width:800px) {
+    html{
+        font-size: 12px;
+    }
     header h1 {
         font-size: 3rem !important;
     }
@@ -558,23 +561,5 @@ header button:hover {
 
     #about .container .count-none {
         border: none;
-    }
-}
-
-@media screen and (max-width:600px) {
-    header h1 {
-        font-size: 1.5rem !important;
-    }
-
-    .title h2 {
-        font-size: 2.5rem;
-    }
-
-    .title h3 {
-        font-size: 1rem;
-    }
-
-    .spe-h2 {
-        font-size: 2rem !important;
     }
 }
